	- format descriptions now also handle base64
	- extended keys can now be derived by directly passing Bitcoin::Crypto::DerivationPath
	- exception is no longer raised if the default network is among multiple possible networks after deserialization of WIFs and extended keys
	- module can now be configured to work in single-network mode, disallowing creation of objects with different networks

	[Changes]
	- codes in Bitcoin::Crypto::Script::Opcode are now integers instead of bytestrings of length 1
	- Bitcoin::Crypto::Util::get_path_info now returns instances of Bitcoin::Crypto::DerivationPath (internal structure remains unchanged)

2.004 Tue Apr 23 2024
	[Improvements]
	- documentation fixes and improvements

	[Breaking changes]
	- removed deprecated Bitcoin::Crypto::Segwit package

2.003 Thu Oct 26 2023
	[Improvements]
	- fixed undefined value warnings when dumping input without an address
	- documentation improvements

2.002 Sun Oct 22 2023
	[New features]
	- added Bitcoin::Crypto::Util::get_address_type (address validation and recognition)
	- added autodetection of standard scripts from address with [address => $string]

	[Improvements]
	- added generic parent exception classes for Bech32, Base58 and Address exceptions
	- documentation and test improvements

	[Changes and fixes]
	- btc_extprv->from_mnemonic with $lang argument will now get rid of extra whitespace from the mnemonic
	- fix not checking length of legacy address type when creating standard script

2.001 Tue Oct 17 2023
	[New features]
	- added P2TR scripts, which can now be created and added as outputs to transactions

	[Improvements]
	- minor changes to tests and non-essential traits of the code

2.000 Sun Oct 15 2023
	[New features]
	- added transaction system
	- added script execution system
	- added more examples
	- added manual
	- many minor additions all across the board

	[Improvements]
	- all functions and methods now check their input arguments
	- test suite has been refactored